--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,8 @@ bundler_args: --without production
 env:
   global:
     # in TravisCI settings, set CCKEY to your CodeClimate Test Reporter ID:
-    - CC_TEST_REPORTER_ID=$CCKEY
+    # - CC_TEST_REPORTER_ID=$CCKEY
+    - CC_TEST_REPORTER_ID=871e6327e009a3e84068c9586b9e41579d44f6811b0b5d6824ed3b55365d07c4
     - CCTR=./cc-test-reporter
     # set to whatever timezone your app assumes from this list:
     # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
