travis.yml updated

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ bundler_args: --without production
 env:
   global:
     # in TravisCI settings, set CCKEY to your CodeClimate Test Reporter ID:
-    - CC_TEST_REPORTER_ID=55d4a6162bf499484c03ca984ff2170efdfab86ea695cda4f19f7b6a724e67c7
+    - CC_TEST_REPORTER_ID=$CCKEY
     - CCTR=./cc-test-reporter
     # set to whatever timezone your app assumes from this list:
     # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
